[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "froster"
version = "0.19.0"
description = "Froster is a tool for easy arachive and restore between local file systems and S3 like storage."
authors = ["Dirk Petersen <no@mail.com>", "Victor Machado <victor.machado@hpcnow.com>"]
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
boto3 = "^1.36.00"
duckdb = "^1.1.0"
inquirer = "^3.2.4"
psutil = "^6.1.0"
requests = "^2.32.3"
textual = "^1.0.0"
visidata = "^3.0.2"
setuptools = "^75.0.0"
tqdm = "^4.66.5"

[tool.poetry.scripts]
froster = "froster.froster:main"
