[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "froster"
version = "0.21.2"

description = "Froster is a tool for easy archive and restore between local file systems and AWS S3 storage."
authors = ["Dirk Petersen <no@mail.com>", "Victor Machado <victor.machado@hpcnow.com>"]
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
boto3 = "^1.40.55"
duckdb = "^1.4.1"
inquirer = "^3.4.1"
psutil = "^7.1.1"
requests = "^2.32.5"
textual = "^6.3.0"
visidata = "^3.1.1"
setuptools = "^75.8.0"
tqdm = "^4.67.1"

[tool.poetry.scripts]
froster = "froster.froster:main"
